[[bin]]
name = "image-processing"


[lib]
name = "image_processing"
path = "src/lib.rs"

[package]
name = "image-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "compare_blur"
harness = false
# path = "benches/compare_blur.rs"

[dependencies]
opencv = "0.86.1"
image = "0.24.7"
